change environment var names
Signed-off-by: hammyau <icunning@au1.ibm.com>

--- a/PETestFramework/spec/Example.yaml
+++ b/PETestFramework/spec/Example.yaml
@@ -34,7 +34,7 @@ tests:
   xmlfiles:
   - name: "test.xml"
   #List of input data sets - for the moment called event files
-  #the filename is relative to the TEST_HLQ.INPUT
+  #the filename is relative to the GERS_TEST_HLQ.INPUT
   #you can use an absoulte DSN as well
   eventfiles:
   - ddname: "TESTIN" #needs to match what is in the PF DDName
