CMIALL test timeout to 20
Signed-off-by: hammyau <icunning@au1.ibm.com>

--- a/PETestFramework/spec/PeTests/Comparison/Integer/CMIALL.yaml
+++ b/PETestFramework/spec/PeTests/Comparison/Integer/CMIALL.yaml
@@ -10,6 +10,7 @@ tests:
   header: "Big Bang"
   description: "All Cases"
   source: "WBXML"
+  timeout: "20"
   decimalplaces: "0"
   xmlfiles:
   - name: "CMISORTED.xml"
