generate LR with insensitve field names
Signed-off-by: hammyau <icunning@au1.ibm.com>

--- a/ComponentGenerator/components/logicalRecord.yaml
+++ b/ComponentGenerator/components/logicalRecord.yaml
@@ -24,6 +24,7 @@ members:
   type: map
   key: Name
   key_type: String
+  sorted: true
   values: org.genevaers.repository.components.LRField
   values_type: LRField
 - name: indexBySeq
