--- a/ComponentGenerator/components/MetadataEnums.yaml
+++ b/ComponentGenerator/components/MetadataEnums.yaml
@@ -144,12 +144,12 @@ enums:
   description: Logic Table Camparison Values
 - name: DateCode
   asm_prefix: DATE_CODE_
-  dbcodes: [NONE,YYMMDD,YY_MM_DD,CYMD,CCYY_MM_DD,DDMMYY,DD_MM_YY,DDMMCCYY,DD_MM_CCYY,YYDDD,YY_DDD,
-  CYDDD,CCYY_DDD,MMDD,MM_DD,DD_MM,M,DD,DDDDDDDD,HHMMSSTT,HH_MM_SS_TT,HHMMSS,HH_MM_SS,HHMM,HH_MM,
-  CCYYMMDDHHNNSS,SSSSSSSS,LOWERCASE,UPPERCASE,DBCS,CYM,CCYY,YY,SYBASEDATE,POSIXDATE,MMDDYY,MMDDCCYY,
-  MM_DD_CCYY,CCYY_DDD2,CCYY_MM2,CCYY_MM_DD2,CCYY_MM,POSIXDATE2,DD_MM2,DD_MM_CCYY2,DD_MM_YY2,MM_DD2,
-  MM_DD_CCYY2,YY_DDD2,YY_MM_DD2,MONTH_DD_CCYY,DD_MONTH_CCYY,DD_MON_CCYY,MONTH_CCYY,CCYYMMDDHHNNSSTT,
-  CCYYMMDDHHMMSSTTTTTT,DB2DATE]
+  dbcodes: [NONE,YMD,Y/M/D,CYMD,CY/MD,DMY,D/M/Y,DMCY,D/MCY,Y/DDD,YYDDD,
+  CYDDD,CY/DD,MMDD,MM/DD,DD/MM,M,DD,DDDDDDDD,HMST,H:MST,HMS,H:M:S,HHMM,HH:MM,
+  CYMDH,SSSSSSSS,LOWERCASE,UPPERCASE,DBCS,CYM,CCYY,YY,CYAP,POSIX,MDY,MDCY,
+  MD/CY,CY-DD,CY-M,C-M-D,CY/M,POS2,D-M,D-M-C,D-M-Y,M-D,
+  M-D-C,Y-DD,Y-M-D,USDAT,EUDAT,DMOCY,MMMMY,CCYYMMDDHHNNSSTT,
+  CYMDT,DB2DATE]
   equates: [NONE,YYMMDD,YY_MM_DD,CYMD,CCYY_MM_DD,DDMMYY,DD_MM_YY,DDMMCCYY,DD_MM_CCYY,YYDDD,YY_DDD,
   CYDDD,CCYY_DDD,MMDD,MM_DD,DD_MM,M,DD,DDDDDDDD,HHMMSSTT,HH_MM_SS_TT,HHMMSS,HH_MM_SS,HHMM,HH_MM,
   CCYYMMDDHHNNSS,SSSSSSSS,LOWERCASE,UPPERCASE,DBCS,CYM,CCYY,YY,SYBASEDATE,POSIXDATE,MMDDYY,MMDDCCYY,
