Correct Demo spec
Signed-off-by: gillianh <gillianh@au1.ibm.com>

--- a/PETestFramework/spec/PeTests/DEMO/DEMO.yaml
+++ b/PETestFramework/spec/PeTests/DEMO/DEMO.yaml
@@ -105,26 +105,9 @@ tests:
   # for an extract only view
   # For a format phase it will be EXTR00n where n is defined in the view
   extractfiles:
-  - space: "TRK"
-    primary: "500"
-    secondary: "100"
-    recfm: "VB"
-    lrecl: "8192"
-  - space: "TRK"
-    primary: "500"
-    secondary: "100"
-    recfm: "VB"
-    lrecl: "8192"
-  - space: "TRK"
-    primary: "500"
-    secondary: "100"
-    recfm: "VB"
-    lrecl: "8192"
-  formatfiles:
-  - ddname: "DAGSTATO"
+  - ddname: "OUTPUT01" 
     space: "TRK"
-    primary: "100"
-    secondary: "10"
-    recfm: "FB"
-    lrecl: "250"
-    workfile: "3"
+    primary: "500"
+    secondary: "100"
+    recfm: "VB"
+    lrecl: "8192"
