--- a/PETestFramework/spec/PeTests/Function/STRFN.yaml
+++ b/PETestFramework/spec/PeTests/Function/STRFN.yaml
@@ -11,8 +11,7 @@ tests:
   description: "String Concatenation compares and assignments"
   source: "WBXML"
   xmlfiles:
-  - name: "ConcatNew[12150].xml"
-    
+  - name: "ConcatNew[12150].xml"   
   eventfiles:
   - ddname: "CONCAT"
     filename: "CONCAT"
@@ -24,105 +23,63 @@ tests:
     recfm: "FB"
     lrecl: "122"
     comparable: "true"
-# - name: "STRFNR"
-#   header: "String Concatenation Column Reference"
-#   description: "String Concatenation with column references using compares and assignments"
-#   source: "WBXML"
-#   xmlfiles:
-#   - name: "ConcatRef.xml"
-    
-#   eventfiles:
-#   - ddname: "CONCAT"
-#     filename: "CONCAT"
-#   extractfiles:
-#   - ddname: "F0011559"
-#     space: "TRK"
-#     primary: "1"
-#     secondary: "10"
-#     recfm: "FB"
-#     lrecl: "92"
-#     comparable: "true"
-# - name: "STRFNS"
-#   header: "Substring"
-#   description: "Test substring function with all types"
-#   source: "WBXML"
-#   xmlfiles:
-#   - name: "SubStr.xml"
-    
-#   eventfiles:
-#   - ddname: "CONCAT"
-#     filename: "CONCAT"
-#   reffiles:
-#   - ddname: "CONTARG"
-#     filename: "CONTARG"
-#   extractfiles:
-#   - ddname: "F0011560"
-#     space: "TRK"
-#     primary: "1"
-#     secondary: "10"
-#     recfm: "FB"
-#     lrecl: "35"
-#     comparable: "true"
-# - name: "STRFNE"
-#   header: "Left"
-#   description: "Test left function with all types"
-#   source: "WBXML"
-#   xmlfiles:
-#   - name: "Left.xml"
-    
-#   eventfiles:
-#   - ddname: "CONCAT"
-#     filename: "CONCAT"
-#   reffiles:
-#   - ddname: "CONTARG"
-#     filename: "CONTARG"
-#   extractfiles:
-#   - ddname: "F0011561"
-#     space: "TRK"
-#     primary: "1"
-#     secondary: "10"
-#     recfm: "FB"
-#     lrecl: "35"
-#     comparable: "true"
-# - name: "STRFNI"
-#   header: "Right"
-#   description: "Test right function with all types"
-#   source: "WBXML"
-#   xmlfiles:
-#   - name: "Right.xml"
-    
-#   eventfiles:
-#   - ddname: "CONCAT"
-#     filename: "CONCAT"
-#   reffiles:
-#   - ddname: "CONTARG"
-#     filename: "CONTARG"
-#   extractfiles:
-#   - ddname: "F0011562"
-#     space: "TRK"
-#     primary: "1"
-#     secondary: "10"
-#     recfm: "FB"
-#     lrecl: "35"
-#     comparable: "true"
-# - name: "STRFNP"
-#   header: "Compare concat both side"
-#   description: "Check compare with concatenation both sides"
-#   source: "WBXML"
-#   xmlfiles:
-#   - name: "ConcatPart.xml"
-    
-#   eventfiles:
-#   - ddname: "CONCAT"
-#     filename: "CONCAT"
-#   reffiles:
-#   - ddname: "CONTARG"
-#     filename: "CONTARG"
-#   extractfiles:
-#   - ddname: "F0011563"
-#     space: "TRK"
-#     primary: "1"
-#     secondary: "10"
-#     recfm: "FB"
-#     lrecl: "30"
-#     comparable: "true"
+- name: "STRFNS"
+  header: "Substring"
+  description: "Test substring function with all types"
+  source: "WBXML"
+  xmlfiles:
+  - name: "SubStr.xml"
+  eventfiles:
+  - ddname: "CONCAT"
+    filename: "CONCAT"
+  reffiles:
+  - ddname: "CONTARG"
+    filename: "CONTARG"
+  extractfiles:
+  - ddname: "F0011560"
+    space: "TRK"
+    primary: "1"
+    secondary: "10"
+    recfm: "FB"
+    lrecl: "35"
+    comparable: "true"
+- name: "STRFNE"
+  header: "Left"
+  description: "Test left function with all types"
+  source: "WBXML"
+  xmlfiles:
+  - name: "Left.xml"
+  eventfiles:
+  - ddname: "CONCAT"
+    filename: "CONCAT"
+  reffiles:
+  - ddname: "CONTARG"
+    filename: "CONTARG"
+  extractfiles:
+  - ddname: "F0011561"
+    space: "TRK"
+    primary: "1"
+    secondary: "10"
+    recfm: "FB"
+    lrecl: "35"
+    comparable: "true"
+- name: "STRFNI"
+  header: "Right"
+  description: "Test right function with all types"
+  source: "WBXML"
+  xmlfiles:
+  - name: "Right.xml"
+  eventfiles:
+  - ddname: "CONCAT"
+    filename: "CONCAT"
+  reffiles:
+  - ddname: "CONTARG"
+    filename: "CONTARG"
+  extractfiles:
+  - ddname: "F0011562"
+    space: "TRK"
+    primary: "1"
+    secondary: "10"
+    recfm: "FB"
+    lrecl: "35"
+    comparable: "true"
