--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,6 +39,15 @@
         },
         {
             "type": "java",
+            "name": "Launch RCA Diff(PlayPen)",
+            "request": "launch",
+            "mainClass": "org.genevaers.runcontrolanalyser.CommandLineHandler",
+            "projectName": "runcontrolanalyser",
+            "cwd": "${workspaceFolder}/../../../RunControlPlayPen",
+            "args": "-d"
+        },
+        {
+            "type": "java",
             "name": "Launch TestFramework Menu",
             "request": "launch",
             "mainClass": "org.genevaers.testframework.CommandLineHandler",
