--- a/PETestFramework/spec/PeTests/Function/STRFN.yaml
+++ b/PETestFramework/spec/PeTests/Function/STRFN.yaml
@@ -11,7 +11,7 @@ tests:
   description: "String Concatenation compares and assignments"
   source: "WBXML"
   xmlfiles:
-  - name: "ConcatNew[12150].xml"   
+  - name: "Concat.xml"
   eventfiles:
   - ddname: "CONCAT"
     filename: "CONCAT"
@@ -19,12 +19,29 @@ tests:
   - ddname: "CONTARG"
     filename: "CONTARG"
   extractfiles:
-  - ddname: "F0012150"
+  - ddname: "F0011556"
     space: "TRK"
     primary: "1"
     secondary: "10"
     recfm: "FB"
     lrecl: "122"
+    comparable: "true"
+- name: "STRFNR"
+  header: "String Concatenation Column Reference"
+  description: "String Concatenation with column references using compares and assignments"
+  source: "WBXML"
+  xmlfiles:
+  - name: "ConcatRef.xml"
+  eventfiles:
+  - ddname: "CONCAT"
+    filename: "CONCAT"
+  extractfiles:
+  - ddname: "F0011559"
+    space: "TRK"
+    primary: "1"
+    secondary: "10"
+    recfm: "FB"
+    lrecl: "92"
     comparable: "true"
 - name: "STRFNS"
   header: "Substring"
@@ -85,4 +102,24 @@ tests:
     secondary: "10"
     recfm: "FB"
     lrecl: "35"
+    comparable: "true"
+  - name: "STRFNP"
+  header: "Compare concat both side"
+  description: "Check compare with concatenation both sides"
+  source: "WBXML"
+  xmlfiles:
+  - name: "ConcatPart.xml"    
+  eventfiles:
+  - ddname: "CONCAT"
+    filename: "CONCAT"
+  reffiles:
+  - ddname: "CONTARG"
+    filename: "CONTARG"
+  extractfiles:
+  - ddname: "F0011563"
+    space: "TRK"
+    primary: "1"
+    secondary: "10"
+    recfm: "FB"
+    lrecl: "30"
     comparable: "true"
