--- a/ComponentGenerator/logicTableRecords/LogicTableNV.yaml
+++ b/ComponentGenerator/logicTableRecords/LogicTableNV.yaml
@@ -14,6 +14,7 @@ fields:
   type: short
 - name: LITTLE_ENDIAN
   type: boolean
+  default: true
 - name: padding
   type: byte
 - name: sort_key_len
