hardcode error and trunc values in ViewDef
Signed-off-by: hammyau <icunning@au1.ibm.com>

--- a/ComponentGenerator/components/ViewDefinition.yaml
+++ b/ComponentGenerator/components/ViewDefinition.yaml
@@ -53,9 +53,7 @@ members:
   type: integer
 - name: lookupRelPeriodId
   type: integer
-- name: fillErrorValue
-  type: string
-- name: fillTruncationValue
+- name: ownerUser
   type: string
 - name: extractSummarized
   type: boolean
