vdp gen pad with space between time and date
Signed-off-by: hammyau <icunning@au1.ibm.com>

--- a/ComponentGenerator/vdprecords/VDPGenerationRecord.yaml
+++ b/ComponentGenerator/vdprecords/VDPGenerationRecord.yaml
@@ -67,7 +67,7 @@ fields:
   maxlength: 10
 - name: padding3
   type: byte
-  padding : true
+  default: 32
 - name: time
   type: string
   maxlength: 8
