--- a/PETestFramework/spec/PeTests/LongFields/longFieldTestsFormat.yaml
+++ b/PETestFramework/spec/PeTests/LongFields/longFieldTestsFormat.yaml
@@ -240,7 +240,36 @@ tests:
     recfm: "VB"
     lrecl: "8192"
   formatfiles:
-  - ddname: "F0012156"
+  - ddname: "F0012158"
+    space: "TRK"
+    primary: "100"
+    secondary: "100"
+    recfm: "FB"
+    lrecl: "256"
+    workfile: "1"
+#
+# next test
+#
+- name: "FMTDTR3"
+  header: "FMTDTR3"
+  description: "Test DT* functions 256+ length fields Format Report, left alignment"
+  source: "WBXML"
+  xmlfiles:
+  - name: "LongFields/long_field_all_DT_format_report3[12159].xml"
+  eventfiles:
+  - ddname: "LNGALPHA" #needs to match what is in the PF DDName
+    filename: "LONGFLD.ALPHA"
+  #List of reference files 
+  # omit if no reference phase required
+  #Extract output 
+  extractfiles:
+  - space: "TRK"
+    primary: "1"
+    secondary: "10"
+    recfm: "VB"
+    lrecl: "8192"
+  formatfiles:
+  - ddname: "F0012159"
     space: "TRK"
     primary: "100"
     secondary: "100"
