--- a/PETestFramework/spec/PeTests/LongFields/longFieldTestsFormat.yaml
+++ b/PETestFramework/spec/PeTests/LongFields/longFieldTestsFormat.yaml
@@ -194,7 +194,7 @@ tests:
 #
 - name: "FMTDTR"
   header: "FMTDTR"
-  description: "Test DT* functions 256+ length fields Format Report"
+  description: "Test Format Report, report too wide error"
   source: "WBXML"
   xmlfiles:
   - name: "LongFields/long_field_all_DT_format_report[12156].xml"
@@ -223,7 +223,7 @@ tests:
 #
 - name: "FMTDTR2"
   header: "FMTDTR2"
-  description: "Test DT* functions 256+ length fields Format Report"
+  description: "Test Format Report, long fields but smaller columns"
   source: "WBXML"
   xmlfiles:
   - name: "LongFields/long_field_all_DT_format_report2[12158].xml"
@@ -252,7 +252,7 @@ tests:
 #
 - name: "FMTDTR3"
   header: "FMTDTR3"
-  description: "Test DT* functions 256+ length fields Format Report, left alignment"
+  description: "Test Format Report, long fields, left alignment"
   source: "WBXML"
   xmlfiles:
   - name: "LongFields/long_field_all_DT_format_report3[12159].xml"
@@ -270,6 +270,35 @@ tests:
     lrecl: "8192"
   formatfiles:
   - ddname: "F0012159"
+    space: "TRK"
+    primary: "100"
+    secondary: "100"
+    recfm: "FB"
+    lrecl: "256"
+    workfile: "1"
+#
+# next test
+#
+- name: "FMTDTR4"
+  header: "FMTDTR4"
+  description: "Test Format Report, sort key too long error"
+  source: "WBXML"
+  xmlfiles:
+  - name: "LongFields/long_field_all_DT_format_report4[12160].xml"
+  eventfiles:
+  - ddname: "LNGALPHA" #needs to match what is in the PF DDName
+    filename: "LONGFLD.ALPHA"
+  #List of reference files 
+  # omit if no reference phase required
+  #Extract output 
+  extractfiles:
+  - space: "TRK"
+    primary: "1"
+    secondary: "10"
+    recfm: "VB"
+    lrecl: "8192"
+  formatfiles:
+  - ddname: "F0012160"
     space: "TRK"
     primary: "100"
     secondary: "100"
