--- a/ComponentGenerator/components/MetadataEnums.yaml
+++ b/ComponentGenerator/components/MetadataEnums.yaml
@@ -150,7 +150,7 @@ enums:
   MD/CY,CY-DD,CY-M,C-M-D,CY/M,POS2,D-M,D-M-C,D-M-Y,M-D,
   M-D-C,Y-DD,Y-M-D,USDAT,EUDAT,DMOCY,MMMMY,CCYYMMDDHHNNSSTT,
   CYMDT,DB2DATE]
-  equates: [NONE,YYMMDD,YY_MM_DD,CYMD,CCYY_MM_DD,DDMMYY,DD_MM_YY,DDMMCCYY,DD_MM_CCYY,YYDDD,YY_DDD,
+  equates: [NONE,YYMMDD,YY_MM_DD,CCYYMMDD,CCYY_MM_DD,DDMMYY,DD_MM_YY,DDMMCCYY,DD_MM_CCYY,YYDDD,YY_DDD,
   CYDDD,CCYY_DDD,MMDD,MM_DD,DD_MM,M,DD,DDDDDDDD,HHMMSSTT,HH_MM_SS_TT,HHMMSS,HH_MM_SS,HHMM,HH_MM,
   CCYYMMDDHHNNSS,SSSSSSSS,LOWERCASE,UPPERCASE,DBCS,CYM,CCYY,YY,SYBASEDATE,POSIXDATE,MMDDYY,MMDDCCYY,
   MM_DD_CCYY,CCYY_DDD2,CCYY_MM2,CCYY_MM_DD2,CCYY_MM,POSIXDATE2,DD_MM2,DD_MM_CCYY2,DD_MM_YY2,MM_DD2,
