page sizes into system
Signed-off-by: hammyau <icunning@au1.ibm.com>

--- a/ComponentGenerator/components/ViewDefinition.yaml
+++ b/ComponentGenerator/components/ViewDefinition.yaml
@@ -68,3 +68,7 @@ members:
 - name: controlRecordId
   type: integer
   vdp_source: controlId
+- name: outputPageSizeMax
+  type: short
+- name: outputLineSizeMax
+  type: short
