YY/DDD date code management
Signed-off-by: hammyau <icunning@au1.ibm.com>

--- a/ComponentGenerator/components/MetadataEnums.yaml
+++ b/ComponentGenerator/components/MetadataEnums.yaml
@@ -144,7 +144,7 @@ enums:
   description: Logic Table Camparison Values
 - name: DateCode
   asm_prefix: DATE_CODE_
-  dbcodes: [NONE,YMD,Y/M/D,CYMD,CY/MD,DMY,D/M/Y,DMCY,D/MCY,Y/DDD,YYDDD,
+  dbcodes: [NONE,YMD,Y/M/D,CYMD,CY/MD,DMY,D/M/Y,DMCY,D/MCY,YYDDD,Y/DDD,
   CYDDD,CY/DD,MMDD,MM/DD,DD/MM,M,DD,DDDDDDDD,HMST,H:MST,HMS,H:M:S,HHMM,HH:MM,
   CYMDH,SSSSSSSS,LOWERCASE,UPPERCASE,DBCS,CYM,CCYY,YY,CYAP,POSIX,MDY,MDCY,
   MD/CY,CY-DD,CY-M,C-M-D,CY/M,POS2,D-M,D-M-C,D-M-Y,M-D,
