--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -57,6 +57,10 @@
 			<groupId>com.google.flogger</groupId>
 			<artifactId>flogger-system-backend</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -89,6 +93,16 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<filtering>true</filtering>
+				<directory>src/main/resources</directory>
+				<includes>
+					<include>application.properties</include>
+					<include>report.ftl</include>
+				</includes>
+			</resource>
+		</resources>
 	</build>
 
 </project>
