--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -99,7 +99,7 @@
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>application.properties</include>
-					<include>report.ftl</include>
+					<include>MR91RPT.ftl</include>
 				</includes>
 			</resource>
 		</resources>
