--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -92,6 +92,14 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.6.3</version>
+				<configuration>
+				
+				</configuration>
+			</plugin>
 		</plugins>
 		<resources>
 			<resource>
