--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>utilities</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.genevaers</groupId>
+			<artifactId>runcontrolanalyser</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
