profile to include db2 jars
Signed-off-by: hammyau <blueham60@gmail.com>

--- a/GenevaIO/pom.xml
+++ b/GenevaIO/pom.xml
@@ -105,4 +105,26 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>db2</id>
+			<dependencies>
+				<dependency>
+					<groupId>com.ibm</groupId>
+					<artifactId>db2jcc_license_cu</artifactId>
+					<version>4</version>
+				</dependency>
+				<dependency>
+					<groupId>com.ibm</groupId>
+					<artifactId>db2jcc4</artifactId>
+					<version>4</version>
+				</dependency>
+				<dependency>
+					<groupId>com.ibm</groupId>
+					<artifactId>db2jcc_license_cisuz</artifactId>
+					<version>4</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
