rename to gvbrcg and gvbrca
Signed-off-by: hammyau <blueham60@gmail.com>

--- a/PETestFramework/JBaseandExitsspeclist.yaml
+++ b/PETestFramework/JBaseandExitsspeclist.yaml
@@ -1,6 +1,6 @@
 specFileSets:
   - name: "Regression Tests"
-    templateSetName: "JMR91toPE.yaml"
+    templateSetName: "gvbrcgtoPE.yaml"
     specs:
       - "PeTests/Assignment/BIGASS.yaml"
       - "PeTests/Comparison/Integer/CMIALL.yaml"
