more name changes and no OUPUTs in config
Signed-off-by: hammyau <blueham60@gmail.com>

--- a/PETestFramework/spec/JMR91/rcgtest.yaml
+++ b/PETestFramework/spec/JMR91/rcgtest.yaml
@@ -2,7 +2,7 @@
 name: "MyView"
 title: "Big Bang Assignment Tests"
 description: "Assignment tests to a type by row"
-category: "JMR91"
+category: "gvbrcg"
 cq: ""
 note: ""
 tests:
@@ -11,4 +11,4 @@ tests:
   description: "Let's see what it does"
   source: "WBXML"
   xmlfiles:
-  - name: "JMR91/blah[12076].xml"
+  - name: "gvbrcg/blah[12076].xml"
