--- a/RunControlAnalyser/pom.xml
+++ b/RunControlAnalyser/pom.xml
@@ -133,7 +133,7 @@
 							<programs>
 								<program>
 									<mainClass>org.genevaers.runcontrolanalyser.App</mainClass>
-									<id>gersrca</id>
+									<id>gvbrca</id>
 								</program>
 							</programs>
 						</configuration>
