--- a/Utilities/pom.xml
+++ b/Utilities/pom.xml
@@ -56,6 +56,11 @@ under the License.
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-collections4</artifactId>
+			<version>4.5.0-M1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.ibm</groupId>
 			<artifactId>jzos</artifactId>
 		</dependency>
