Add RUNVIEWS and subsequent changes
Signed-off-by: hammyau <blueham60@gmail.com>

--- a/RunControlGenerator/pom.xml
+++ b/RunControlGenerator/pom.xml
@@ -104,7 +104,7 @@
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>application.properties</include>
-					<include>MR91RPT.ftl</include>
+					<include>GRCGRPT.ftl</include>
 				</includes>
 			</resource>
 		</resources>
